--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,14 @@
-SUPABASE_URL="YOUR_SUPABASE_URL_HERE"
-SUPABASE_ANON_KEY="YOUR_SUPABASE_ANON_KEY_HERE"
-GROQ_API_KEY="YOUR_GROQ_API_KEY_HERE"
+# Supabase project URL (must be HTTPS URL, not postgres://)
+SUPABASE_URL=https://your-project-ref.supabase.co
+
+# API key for server-side app. Prefer SUPABASE_SERVICE_KEY for backend.
+# You may also use publishable/anon for limited access.
+SUPABASE_KEY=your_supabase_key
+
+# Optional aliases (if you prefer explicit naming)
+SUPABASE_ANON_KEY=
+SUPABASE_SERVICE_KEY=
+
+GROQ_API_KEY=your_groq_api_key
+GROQ_MODEL=llama-3.3-70b-versatile
+APP_ENV=dev
