Harden Groq calls with User-Agent and add live debug probes

--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,6 @@ SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_KEY=
 
 GROQ_API_KEY=your_groq_api_key
-GROQ_MODEL=llama-3.1-70b-versatile
+GROQ_MODEL=llama-3.3-70b-versatile
+GROQ_USER_AGENT=Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36
 APP_ENV=dev
