Add production integration scaffolding: API, adapters, offline sync, mlops curation

--- a/.env.example
+++ b/.env.example
@@ -12,4 +12,22 @@ SUPABASE_SERVICE_KEY=
 GROQ_API_KEY=your_groq_api_key
 GROQ_MODEL=llama-3.1-70b-versatile
 GROQ_USER_AGENT=Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36
+
+# Event bus backend: inmemory | kafka | pulsar
+EVENT_BUS_BACKEND=inmemory
+KAFKA_BOOTSTRAP_SERVERS=
+KAFKA_TOPIC=document-events
+PULSAR_SERVICE_URL=
+PULSAR_TOPIC=persistent://public/default/document-events
+
+# OCR/Authenticity/Fraud integration controls
+OCR_BACKEND=heuristic
+OCR_DEFAULT_LANG=eng
+AUTHENTICITY_BACKEND=heuristic
+FRAUD_CALIBRATION_WEIGHTS={"image":0.35,"behavioral":0.35,"issuer":0.30}
+
+# Issuer registry integration
+ISSUER_REGISTRY_BASE_URL=
+ISSUER_REGISTRY_TOKEN=
+
 APP_ENV=dev
