--- a/.env.example
+++ b/.env.example
@@ -21,8 +21,8 @@ PULSAR_SERVICE_URL=
 PULSAR_TOPIC=persistent://public/default/document-events
 
 # OCR/Authenticity/Fraud integration controls
-OCR_BACKEND=heuristic
-OCR_DEFAULT_LANG=eng
+OCR_BACKEND=tesseract
+OCR_DEFAULT_LANG=eng+hin
 AUTHENTICITY_BACKEND=heuristic
 FRAUD_CALIBRATION_WEIGHTS={"image":0.35,"behavioral":0.35,"issuer":0.30}
 
