Add PaddleOCR backend with fallback and default OCR switch

--- a/.env.example
+++ b/.env.example
@@ -21,7 +21,7 @@ PULSAR_SERVICE_URL=
 PULSAR_TOPIC=persistent://public/default/document-events
 
 # OCR/Authenticity/Fraud integration controls
-OCR_BACKEND=tesseract
+OCR_BACKEND=paddleocr
 OCR_DEFAULT_LANG=eng+hin
 AUTHENTICITY_BACKEND=heuristic
 FRAUD_CALIBRATION_WEIGHTS={"image":0.35,"behavioral":0.35,"issuer":0.30}
