Add SendGrid auth emails and forgot password/username flows

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,12 @@ ISSUER_REGISTRY_BASE_URL=
 ISSUER_REGISTRY_TOKEN=
 
 APP_ENV=dev
+
+# Auth/UI defaults
+DEFAULT_WORKSPACE_ID=workspace-default
+APP_LOGIN_URL=https://govdociq.streamlit.app
+SUPABASE_PASSWORD_RESET_REDIRECT_URL=https://govdociq.streamlit.app
+
+# SendGrid email sender
+SENDGRID_API_KEY=
+SENDGRID_FROM_EMAIL=
