Add Appwrite auth provider support with provider switch and runtime status

--- a/.env.example
+++ b/.env.example
@@ -44,6 +44,14 @@ ISSUER_REGISTRY_BASE_URL=
 ISSUER_REGISTRY_TOKEN=
 
 APP_ENV=dev
+AUTH_PROVIDER=supabase
+
+# Appwrite (used when AUTH_PROVIDER=appwrite)
+APPWRITE_ENDPOINT=
+APPWRITE_PROJECT_ID=
+APPWRITE_PROJECT_NAME=
+APPWRITE_API_KEY=
+APPWRITE_RECOVERY_REDIRECT_URL=
 
 # Auth/UI defaults
 DEFAULT_WORKSPACE_ID=workspace-default
