Add Appwrite database repository and setup script

--- a/.env.example
+++ b/.env.example
@@ -52,6 +52,10 @@ APPWRITE_PROJECT_ID=
 APPWRITE_PROJECT_NAME=
 APPWRITE_API_KEY=
 APPWRITE_RECOVERY_REDIRECT_URL=
+APPWRITE_DATABASE_ID=govdociq
+APPWRITE_COLLECTION_DOCUMENTS=documents
+APPWRITE_COLLECTION_REVIEWS=reviews
+APPWRITE_COLLECTION_AUDIT_EVENTS=audit_events
 
 # Auth/UI defaults
 DEFAULT_WORKSPACE_ID=workspace-default
