--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,8 @@ SUPABASE_SERVICE_KEY=
 GROQ_API_KEY=your_groq_api_key
 GROQ_MODEL=llama-3.1-70b-versatile
 GROQ_USER_AGENT=Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36
+ANTHROPIC_API_KEY=
+MODEL_NAME=claude-sonnet-4-5-20251022
 
 # Event bus backend: inmemory | kafka | pulsar
 EVENT_BUS_BACKEND=inmemory
